<?xml version="1.0"?>
<package format="2">
  <name>rps_turtle_control</name>
  <version>1.0.0</version>
  <description>Simple turtlesim control for RPS class examples.</description>

  <maintainer email="damjan@romb-technologies.hr">damjan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
