<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rps_turtle_control</name>
  <version>1.0.0</version>
  <description>Simple turtlesim control for RPS class examples.</description>
  <maintainer email="damjan@romb-technologies.hr">Damjan Miklić</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
